[gd_scene load_steps=4 format=2]

[ext_resource path="res://cards/cardBase.gd" type="Script" id=1]
[ext_resource path="res://cards/selected_border.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 121.806, 182.71 )

[node name="Area2D" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]

[node name="card-border_selected" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 2 )

[node name="HoverAnimation" type="Tween" parent="."]

[node name="cardReturn" type="Tween" parent="."]

[node name="cardDespawn" type="Tween" parent="."]

[node name="cardSpawn" type="Tween" parent="."]

[node name="cardMoving" type="Tween" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Area2D_area_exited"]
[connection signal="cardreturn" from="." to="." method="_on_Area2D_cardreturn"]
[connection signal="input_event" from="." to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Area2D_mouse_exited"]
[connection signal="tween_all_completed" from="cardDespawn" to="." method="_on_cardDespawn_tween_all_completed"]
[connection signal="tween_all_completed" from="cardSpawn" to="." method="_on_cardSpawn_tween_all_completed"]
